<resources>
    <string name="app_name">UniNet</string>
    <string name="welcome_text">Welcome to UniNet</string>
    <string name="loading_title">Loading</string>
    <string name="loading_message">Please Wait</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_title">Look for a friend..</string>
    <string name="action_settings">Settings</string>
    <string name="menu_refresh">Swipe to Refresh</string>
    <string name="internet_connection_valid">Internet connection found</string>
    <string name="internet_connection_not_valid">Check Internet connection!</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="user_department">Department</string>
    <string name="user_total_post_number">UniPosts</string>
    <string name="user_education_year_name" />
    <string name="user_mail_address">Mail:</string>
    <string name="user_phone_number">Phone:</string>
    <string name="user_relationship_status">Relationship Status:</string>
    <string name="user_web_page">Web Page:</string>
    <string name="user_birthday">Birthday:</string>
    <string name="default_user_department">No department information</string>
    <string name="default_user_total_post_number">No post information</string>
    <string name="default_user_mail_address">No mail information</string>
    <string name="default_user_phone_number">no phone information</string>
    <string name="default_user_relationship_status">No relationship information</string>
    <string name="default_user_web_page">No web page information</string>
    <string name="default_user_birthday">No birthday information</string>
    <string name="default_course_name">No Course Name</string>
    <string name="default_course_time">No Course Time</string>
    <string name="default_course_lecture">No Course Lecture</string>
    <string name="default_course_code">No Course Code</string>
    <string name="default_course_class">No Course Class</string>
    <string name="description_total_friends_button">Total Friends</string>
    <string name="description_total_posts_button">Total UniPosts</string>
    <string name="description_profile_photo">Profile Photo</string>
    <string name="description_messages_user_profile_photo">Profile Photo</string>
    <string name="description_total_uploaded_photo_image">Profile Photo</string>
    <string name="description_total_followers_image">Total Followers</string>
    <string name="description_total_follows_image">Total Follows</string>
    <string name="description_save_settings">Save Settings</string>
    <string name="description_back_arrow">Home Screen</string>
    <string name="description_go_to_lecture">Go To Lecture</string>
    <string name="description_friendship_request">Do you want to add user as a friend?</string>
    <string name="description_friendship_removal">Do you want to remove the user from friend list?</string>
    <string name="description_follow_user">Do you want to follow the user?</string>
    <string name="description_add_friend">Add</string>
    <string name="description_remove_friend">Remove</string>
    <string name="description_block_request">Do you want to block the user?</string>
    <string name="description_block">Block</string>
    <string name="description_block_remove_request">Do you want to remove the block?</string>
    <string name="description_remove_block">Remove Block</string>
    <string name="description_block_list">Block List</string>
    <string name="description_block_list_empty">Your block list is empty</string>
    <string name="snack_bar_total_friends_image" formatted="true">You have %1$s friends.</string>
    <string name="snack_bar_university_progress_image" formatted="true">You are a %1$s Student</string>
    <string name="snack_bar_total_posts_image" formatted="true">You have sent %1$s so far</string>
    <string name="snack_bar_profile_image" formatted="true">You have shared %1$s photos so far</string>
    <string name="snack_bar_total_followers_image" formatted="true">%1$s people are following you right now</string>
    <string name="snack_bar_total_follows_image" formatted="true">You are following %1$s people right now</string>
    <string name="snack_bar_copy_text">Copy</string>
    <string name="snack_bar_copy_text_successful">Copied</string>
    <string name="tr_title_course_unit">Course Unit</string>
    <string name="tr_title_course_unit_title">Course Unit Title</string>
    <string name="tr_title_success_notes">Success Notes</string>
    <string name="tr_title_etcs">ECTS</string>
    <string name="tr_title_point">Point</string>
    <string name="tr_title_education_year">Year</string>
    <string name="tr_title_semester">Semester</string>
    <string name="tr_semester_fall" formatted="true">%1$s Fall Semester</string>
    <string name="tr_semester_spring" formatted="true">%1$s Spring Semester</string>
    <string name="tr_summary_title_semester_gpa">GPA</string>
    <string name="tr_summary_title_cumulative_gpa">C.G.P.A</string>
    <string name="tr_summary_title_semester_ects">Semester Total ECTS</string>
    <string name="tr_summary_title_semester_points">Semester Total Point</string>
    <string name="tr_summary_title_total_ects">Total ECTS</string>
    <string name="tr_summary_title_total_points">Total Points</string>
    <string name="title_need_permission">Need Permission</string>
    <string name="description_need_permission">UniNet needs permission to use this feature. Please go to phone settings and give the required permission</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="wrong_login">Username or Password is wrong!</string>
    <string name="no_internet_connection">Check Internet Connection.</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure that you want to abandon us?</string>
    <string name="logout_positive_answer">Yes :(</string>
    <string name="logout_negative_answer">No way!</string>
    <string name="logout_thanks">Thank you for staying! :)</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="lectures">Lectures</string>
    <string name="messages">Messages</string>
    <string name="add_lecture">Add Lecture</string>
    <string name="assignments">Assignments</string>
    <string name="search_lecture">Search</string>
    <string name="new_message">New Message</string>
    <string name="new_entry">Write your message here…</string>
    <string name="search_user">Search</string>
    <string name="new_post">What\'s on your mind?</string>
    <string name="refresh_successful">Refreshed</string>
    <string name="refresh_failed">Refresh Failed!</string>
    <string name="share_post">Share</string>
    <string name="upload_picture">Upload a Picture</string>
    <string name="successful_post">UniPost sent successfully</string>
    <string name="post_copied">UniPost Copied!</string>
    <string name="post_delete_successful">UniPost Deleted!</string>
    <string name="post_delete_unsuccessful">UniPost Could Not Deleted!</string>
    <string name="uni_message_copied">UniMessage Copied!</string>
    <string name="uni_message_delete_successful">UniMessage Deleted!</string>
    <string name="uni_message_delete_unsuccessful">UniMessage Could Not Deleted!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="friends">Friends</string>
    <string name="follows">Follows</string>
    <string name="followers">Followers</string>
    <string name="photos">Photos</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="about_user">About</string>
    <string name="user_year">Year</string>
    <string name="delete_post">Delete Post</string>
    <string name="total_photos"> 1 </string>
    <string name="total_friends"> 1 </string>
    <string name="total_follows"> 1 </string>
    <string name="course_assignment">Assignments</string>
    <string name="lecture_detail_name" formatted="true">%1$s Details</string>
    <string name="course_weeks">Weeks</string>
    <string name="course_announcements">Announcements</string>
    <string name="time_table">Time Table</string>
    <string name="transcript">Transcript</string>
    <string name="dining_list">Dining List</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="about">About UniNet</string>
    <string name="contact">Contact Us</string>
    <string name="version">earlyDevelopment 0.0.0.2.0.0.0 </string>
    <string name="version_hidden_drawer">v 1.0 </string>
    <string name="title_activity_profile">Profile</string>
    <string name="pref_header_profile">Profile</string>
    <string name="pref_title_changeProfilePhoto">Change Profile Photo</string>
    <string name="pref_description_changeProfilePhoto">Change current profile photo</string>
    <string name="pref_title_phoneNumber">Phone Number</string>
    <string name="pref_description_phoneNumber">Enter your phone number</string>
    <string name="pref_title_mailAddress">Mail Address</string>
    <string name="pref_description_mailAddress">Enter your mail address</string>
    <string name="pref_title_webPage">Web-Page</string>
    <string name="pref_description_webPage">Enter your web-page address</string>
    <string name="pref_title_relationshipStatus">Relationship Status</string>
    <string name="pref_description_relationshipStatus">Add your relationship status</string>
    <string name="pref_title_setBirthday">Date of Birth</string>
    <string name="pref_description_setBirthday">Enter your birthday</string>
    <string name="save_settings">Settings have been saved successfully</string>
    <string name="no_changes">You need to change a value to save</string>
    <string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_description">You haven\'t saved your changes yet. Do you want to leave the page?</string>
    <string name="unsaved_changes_yes">Yes</string>
    <string name="unsaved_changes_no">No</string>
    <string name="pref_header_uniPost">UniPost</string>
    <string name="pref_title_protectUniPosts">Protect UniPosts</string>
    <string name="pref_description_protectUniPosts">Show UniPosts only to your friends</string>
    <string name="pref_title_location">Location</string>
    <string name="pref_description_location">Users can see your location in UniPosts</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_safetyAndPrivacy">Safety and Privacy</string>
    <string name="pref_title_messageReceive">Receive messages from anyone</string>
    <string name="pref_description_messageReceive">Everyone can send you a message</string>
    <string name="pref_title_blockedUsers">Blocks</string>
    <string name="pref_description_blockedUser">List of blocked users</string>
    <string name="pref_title_birthday">Birthday</string>
    <string name="pref_description_birthday">Users can see your birthday in your profile</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="hint_phone_number">XXX XXX XXXX</string>
    <string name="hint_web_page">myWebsite.com</string>
    <string name="hint_mail_address">mail@address.com</string>
    <string name="key_phone_number">key_phone_number</string>
    <string name="key_mail_address">key_mail_address</string>
    <string name="key_relationship_status">key_relationship_status</string>
    <string name="key_web_page">key_web_page</string>
</resources>