<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="set_safety_and_privacy"
        android:summary="@string/pref_description_messageReceive"
        android:title="@string/pref_title_messageReceive" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="set_birthday_visibility"
        android:summary="@string/pref_description_birthday"
        android:title="@string/pref_title_birthday" />

    <ListPreference
        android:key="list_blocked_users"
        android:summary="@string/pref_description_blockedUser"
        android:title="@string/pref_title_blockedUsers"
        android:defaultValue="180"
        android:entries="@array/pref_list_blocked_users"
        android:entryValues="@array/pref_list_blocked_users_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"


        />






</PreferenceScreen>
