<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="fill_parent"
    android:layout_height="45dp"
    android:gravity="center"
    android:orientation="horizontal">

    <TableRow
        android:id="@+id/course_info_container"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:weightSum="8"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/course_unit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_margin="1dp"
            android:layout_weight="1.5"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/tr_title_course_unit"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/course_unit_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/tr_title_course_unit_title"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/course_success_grade"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="2"
            android:layout_margin="1dp"
            android:layout_weight="1.5"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/tr_title_success_notes"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/course_ects"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="3"
            android:layout_margin="1dp"
            android:layout_weight="1.5"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/tr_title_etcs"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/course_point"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="4"
            android:layout_margin="1dp"
            android:layout_weight="1.5"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/tr_title_point"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>




    </TableRow>


</android.support.constraint.ConstraintLayout>