<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/r_layout_1"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/lecture_code"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:paddingStart="5dp"
        android:textAlignment="center"
        android:text="@string/default_course_code"
        android:textColor="@color/white"
        android:background="@drawable/curved_corners"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lecture_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:paddingStart="60dp"
        android:textAlignment="textStart"
        android:text="@string/default_course_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/go_to_lecture_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_enter_arrow"
        android:layout_centerVertical="true"
        android:layout_marginEnd="5dp"
        android:layout_alignEnd="@id/lecture_name"
        android:contentDescription="@string/description_back_arrow" />

</RelativeLayout>


